Reorder files, fix issues Fix some styling issues Two known bugs: firing click event does not trigger the click on the table and the direction that is passed with firing the event does get passed on.
Possible improvement: take position of pointer a bit back in time, now the pushing motion makes the pointer move too much.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body{
-    background-image: url('background.png');
+    background-image: url('img/background.png');
     background-repeat:no-repeat;
 }
 #mycursor {
     position: fixed;
     display : none;
-    width : 40px;
-    height : 40px;
-    background-image:url('crosshair.png');
+    width : 50px;
+    height : 50px;
+    background-image:url('img/vizier.png');
 }
  
 #mycursor.pushed {
@@ -24,14 +24,25 @@ td{
     border: 1px solid black;
 }
 
-/*-webkit-transform: scale(1);
--moz-transform: scale(1);
-transform: scale(1);
+.grow{
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
+}
 
--webkit-transition:all .3s ease;
+.fade{
+    -webkit-transform: scale(0.01);
+    -moz-transform: scale(0.01);
+    transform: scale(0.01);
+}
+
+/*-webkit-transition:all .3s ease;
 -moz-transition:all .3s ease;
 transition:all .3s ease;*/
 
 img {
     vertical-align: middle;
+    -webkit-transition:all .8s ease;
+    -moz-transition:all .8s ease;
+    transition:all .8s ease;
 }
